--- a/p8105_hw3_as6183.md
+++ b/p8105_hw3_as6183.md
@@ -75,9 +75,13 @@ aisles_10000 = instacart%>%
   count(vars=c('aisle','aisle_id'))%>%
   filter(freq>10000)
 
-instacart_10000 = filter(instacart,aisle%in%pull(aisles_10000,aisle))
-
-ggplot(instacart_10000,aes(x=aisle))+geom_bar()
+ggplot(aisles_10000,aes(x=aisle,y=freq))+
+  geom_bar(stat="identity")+
+  theme_bw()+
+  theme(axis.text.x = element_text(size=8,angle=90),plot.title=element_text(size=11))+
+  xlab("Aisle Name")+
+  ylab("Number of Items Ordered")+
+  ggtitle("Distribution of the number of items ordered for aisles with over 10,000 orders")
 ```
 
 ![](p8105_hw3_as6183_files/figure-gfm/unnamed-chunk-3-1.png)<!-- -->
@@ -95,8 +99,29 @@ most_popular = most_popular%>%
   dplyr::arrange(desc(freq),by_group=T)%>%
   top_n(n=3,wt=freq)
 
-#data.table(aisle=pull(most_popular,aisle),product_name=pull(most_popular,product_name),freq=pull(most_popular,freq))
+summarise(most_popular,Aisle = aisle,Product = product_name, `Times Ordered` = freq)
 ```
+
+    ##                        Aisle                                       Product
+    ## 1 packaged vegetables fruits                          Organic Baby Spinach
+    ## 2 packaged vegetables fruits                           Organic Raspberries
+    ## 3 packaged vegetables fruits                           Organic Blueberries
+    ## 4         baking ingredients                             Light Brown Sugar
+    ## 5         baking ingredients                              Pure Baking Soda
+    ## 6         baking ingredients                                    Cane Sugar
+    ## 7              dog food care Snack Sticks Chicken & Rice Recipe Dog Treats
+    ## 8              dog food care           Organix Chicken & Brown Rice Recipe
+    ## 9              dog food care                            Small Dog Biscuits
+    ##   Times Ordered
+    ## 1          9784
+    ## 2          5546
+    ## 3          4966
+    ## 4           499
+    ## 5           387
+    ## 6           336
+    ## 7            30
+    ## 8            28
+    ## 9            26
 
 ``` r
 pink_lady_coffee_ice_cream = instacart%>%
@@ -191,7 +216,11 @@ summarise(.data=accel,Week=week,Day=day,Total_Activity_Per_Day=total_activity_pe
     ## 35    5 Wednesday              445366.00
 
 ``` r
-ggplot(data=accel,aes(x=day_id,y=total_activity_per_day,color=day))+geom_point()+xlab("Day ID")+ylab("Total Activity Per Day")+ggtitle("Total Activity Measured Per Day Over 5 Weeks")
+ggplot(data=accel,aes(x=day_id,y=total_activity_per_day,color=day))+
+  geom_point(size=3)+
+  xlab("Day ID")+
+  ylab("Total Activity Per Day")+
+  ggtitle("Total Activity Measured Per Day Over 5 Weeks")
 ```
 
 ![](p8105_hw3_as6183_files/figure-gfm/unnamed-chunk-8-1.png)<!-- -->
@@ -218,7 +247,7 @@ data missing which is a very large amount.
 ny_noaa=separate(ny_noaa,col="date",into=c("year","month","day"),sep="-")
 ny_noaa=ny_noaa%>%
   dplyr::arrange(year,month)%>%
-  mutate(prcp=prcp/100,snow=snow/10,snwd=snwd/10,tmax=as.integer(tmax)/10,tmin=as.integer(tmin)/10)
+  mutate(prcp=prcp/100,snow=snow/10,snwd=snwd/10,tmax=as.integer(tmax)/10,tmin=as.integer(tmin)/10) #converted length measurements to centimeters and temperature measurements to degrees from tenths of a degree
 mode_snowfall = data.frame(table(pull(ny_noaa,snow)))
 ```
 
@@ -232,24 +261,49 @@ for snowfall.
 ``` r
 data = aggregate(pull(ny_noaa,tmax),by = list(pull(ny_noaa,month),pull(ny_noaa,year),pull(ny_noaa,id)),FUN=mean,na.rm=T)
 data = filter(data,Group.1=="01"|Group.1=="07")
+data = data%>%
+  mutate(Group.1 = recode(Group.1,"01"="January","07"="July"))
 data = na.omit(data)
 ggplot(data, aes(x = Group.2, y = x)) +
   geom_boxplot()+
-  facet_grid(. ~ Group.1)
+  facet_grid(. ~ Group.1)+
+  theme_bw()+
+  theme(axis.text.x = element_text(size=8,angle=90),plot.title=element_text(size=11))+
+  xlab("Year")+
+  ylab("average Maximum Temperature (degrees Celcius)")+
+  ggtitle("Average Max Temperatures at Each Station in January and July each Year")
 ```
 
 ![](p8105_hw3_as6183_files/figure-gfm/unnamed-chunk-11-1.png)<!-- -->
 
 ``` r
-# data = cbind(pull(ny_noaa,t_max),pull(ny_noaa,t_min))
-# ggplot(ny_noaa, aes(x = , y = x)) +
-#   geom_point()+
-#   facet_grid(. ~ Group.1)
-
-data = filter(ny_noaa,snow<10&snow>0)
-data = aggregate(pull(data,snow),by = list(pull(data,year)),FUN=sum,na.rm=T)
-ggplot(data,aes(x=Group.1,y=x))+
-  geom_boxplot()
+data = select(ny_noaa,c("id","year","month","day","tmax","tmin"))%>%
+  pivot_longer(tmax:tmin,names_to="Temperature",values_to="Temperature_Val")%>%
+  mutate(date = paste0(month,"-",day,"-",year))%>%
+  na.omit()%>%
+  select(-c("month","day","year"))
+ggplot(data, aes(x = date, y = Temperature_Val)) +
+  geom_line()+
+  facet_grid(. ~Temperature)+
+  theme_bw()+
+  theme(axis.text.x = element_blank(),plot.title=element_text(size=10), axis.ticks.x = element_blank())+
+  xlab("Time")+
+  ylab("Temperature(degrees Celcius)")+
+  ggtitle("Max Temperatures and Min Temperatures at Each Station for Each Day In Data Set")
 ```
 
 ![](p8105_hw3_as6183_files/figure-gfm/unnamed-chunk-12-1.png)<!-- -->
+
+``` r
+data = filter(ny_noaa,snow<10&snow>0)
+data = aggregate(pull(data,snow),by = list(pull(data,year)),FUN=sum,na.rm=T)
+ggplot(data,aes(x=Group.1,y=x))+
+  geom_bar(stat="identity")+
+    theme_bw()+
+  theme(axis.text.x = element_text(size=8,angle=90),plot.title=element_text(size=11))+
+  xlab("Year")+
+  ylab("Snowfall (cm)")+
+  ggtitle("Distribution of Snowfall between 0 and 100 mm for every year")
+```
+
+![](p8105_hw3_as6183_files/figure-gfm/unnamed-chunk-12-2.png)<!-- -->
