Added some comments as well as explanations to Problem 1.

--- a/p8105_hw3_as6183.md
+++ b/p8105_hw3_as6183.md
@@ -45,7 +45,7 @@ library(plyr)
 
 ``` r
 library(dplyr)
-data("instacart")
+data("instacart") #loading instacart data set
 ```
 
 The Instacart data set gives information on over 3 million online
@@ -59,21 +59,21 @@ items are getting purchased most/least frequently.
 
 ``` r
 number_aisles = count(instacart,vars=c('aisle','aisle_id'))%>%
-  nrow()
+  nrow() #named variable number_aisles because it gives the number of aisles in the data set
 
 most_ordered = instacart%>%
   count(vars=c('aisle','aisle_id'))%>%
-  select('freq')%>%
-  max()
+  top_n(3,wt=freq)  #named variable most_ordered because it gives the three aisles that have the most orders in the data set
 ```
 
-There are 134 aisles and
+There are 134 aisles and the top 3 aisles that have the most orders are
+fresh fruits, fresh vegetables, packaged vegetables fruits.
 
 ``` r
 library(ggplot2)
 aisles_10000 = instacart%>%
   count(vars=c('aisle','aisle_id'))%>%
-  filter(freq>10000)
+  filter(freq>10000) #named variable aisles_10000 because it only contains aisles in the data set with more than 10,000 orders
 
 ggplot(aisles_10000,aes(x=aisle,y=freq))+
   geom_bar(stat="identity")+
@@ -85,6 +85,16 @@ ggplot(aisles_10000,aes(x=aisle,y=freq))+
 ```
 
 ![](p8105_hw3_as6183_files/figure-gfm/unnamed-chunk-3-1.png)<!-- -->
+
+From the plot, there are 39 aisles that have over 10,000 items ordered
+from them. Two of the aisles, fresh fruits and fresh vegetables, have an
+extremely large amount of orders, around 150,000 for both aisles. This
+would make sense as a majority of households eat fresh fruits and
+vegetables and would buy them to consume throughout the week.
+Contrarily, aisles such as butter or cream have a very low number of
+orders which could be due to the fact that a lot of healthy eaters or
+customers that don’t consume dairy won’t buy from these aisles, or in
+the case of paper goods contain items that only specific shoppers need.
 
 ``` r
 #library(data.table)
@@ -123,6 +133,15 @@ summarise(most_popular,Aisle = aisle,Product = product_name, `Times Ordered` = f
     ## 8            28
     ## 9            26
 
+This table shows the three most popular items from the packaged
+vegetables fruits, baking ingredients, and dog food care aisles. Organic
+Baby Spinach was the most ordered item from packaged vegetables fruits,
+Light Brown Sugar was the most ordered item from baking ingredients, and
+Snack Sticks Chicken & Rice Recipe Dog Treats was the most ordered item
+from dog food care. This makes sense because spinach is a very popular
+packaged vegetable, brown sugar is needed for almost any baking recipe,
+and dog treats are needed to help train/feed dogs.
+
 ``` r
 pink_lady_coffee_ice_cream = instacart%>%
   filter(product_name=="Pink Lady Apples"|product_name=="Coffee Ice Cream")%>%
@@ -145,6 +164,13 @@ table
     ##   <chr>             <dbl>   <dbl>     <dbl>    <dbl>  <dbl>    <dbl>  <dbl>
     ## 1 Coffee Ice Cream   13.8    14.3      15.4     15.3   15.2     12.3   13.8
     ## 2 Pink Lady Apples   13.4    11.4      11.7     14.2   11.6     12.8   11.9
+
+This table shows the mean hour of the day when Coffee Ice Cream and Pink
+Lady Apples are ordered for every day of the week. The average hour that
+Coffee Ice Cream was ordered is generally much later than Pink Lady
+Apples. This could be due to people generally wanting to eat ice cream
+later in the day, such as after dinner or as a midnight snack, when
+compared to Pink Lady Apples.
 
 # Problem 2:
 
