--- a/p8105_hw3_as6183.Rmd
+++ b/p8105_hw3_as6183.Rmd
@@ -9,26 +9,25 @@ library(p8105.datasets)
 library(tidyverse)
 library(plyr)
 library(dplyr)
-data("instacart")
+data("instacart") #loading instacart data set
 ```
 The Instacart data set gives information on over 3 million online grocery orders from more than 200,000 Instacart users in 2017. The size of this dataset is `r nrow(instacart)` rows and `r ncol(instacart)` columns. Some key variables would be the reordered variable to assess what customers are re-buying frequently, the product name to analyze what products are customers buying most and least frequently, the user id to keep track of which customer is buying what, and the department to analyze which category of items are getting purchased most/least frequently. 
 
 ```{r}
 number_aisles = count(instacart,vars=c('aisle','aisle_id'))%>%
-  nrow()
+  nrow() #named variable number_aisles because it gives the number of aisles in the data set
 
 most_ordered = instacart%>%
   count(vars=c('aisle','aisle_id'))%>%
-  select('freq')%>%
-  max()
+  top_n(3,wt=freq)  #named variable most_ordered because it gives the three aisles that have the most orders in the data set
 ```
-There are `r number_aisles` aisles and 
+There are `r number_aisles` aisles and the top 3 aisles that have the most orders are `r pull(most_ordered,aisle)`.
 
 ```{r}
 library(ggplot2)
 aisles_10000 = instacart%>%
   count(vars=c('aisle','aisle_id'))%>%
-  filter(freq>10000)
+  filter(freq>10000) #named variable aisles_10000 because it only contains aisles in the data set with more than 10,000 orders
 
 ggplot(aisles_10000,aes(x=aisle,y=freq))+
   geom_bar(stat="identity")+
@@ -38,6 +37,8 @@ ggplot(aisles_10000,aes(x=aisle,y=freq))+
   ylab("Number of Items Ordered")+
   ggtitle("Distribution of the number of items ordered for aisles with over 10,000 orders")
 ```
+
+From the plot, there are 39 aisles that have over 10,000 items ordered from them. Two of the aisles, fresh fruits and fresh vegetables, have an extremely large amount of orders, around 150,000 for both aisles. This would make sense as a majority of households eat fresh fruits and vegetables and would buy them to consume throughout the week. Contrarily, aisles such as butter or cream have a very low number of orders which could be due to the fact that a lot of healthy eaters or customers that don't consume dairy won't buy from these aisles, or in the case of paper goods contain items that only specific shoppers need. 
 
 ```{r}
 #library(data.table)
@@ -54,6 +55,7 @@ most_popular = most_popular%>%
 
 summarise(most_popular,Aisle = aisle,Product = product_name, `Times Ordered` = freq)
 ```
+This table shows the three most popular items from the packaged vegetables fruits, baking ingredients, and dog food care aisles. Organic Baby Spinach was the most ordered item from packaged vegetables fruits, Light Brown Sugar was the most ordered item from baking ingredients, and Snack Sticks Chicken & Rice Recipe Dog Treats was the most ordered item from dog food care. This makes sense because spinach is a very popular packaged vegetable, brown sugar is needed for almost any baking recipe, and dog treats are needed to help train/feed dogs.
 
 ```{r}
 pink_lady_coffee_ice_cream = instacart%>%
@@ -66,6 +68,8 @@ table = dplyr::summarise(pink_lady_coffee_ice_cream,mean=mean(order_hour_of_day)
 colnames(table) = c("Product Name", "Monday", "Tuesday","Wednesday","Thursday","Friday","Saturday","Sunday")
 table
 ```
+
+This table shows the mean hour of the day when Coffee Ice Cream and Pink Lady Apples are ordered for every day of the week. The average hour that Coffee Ice Cream was ordered is generally much later than Pink Lady Apples. This could be due to people generally wanting to eat ice cream later in the day, such as after dinner or as a midnight snack, when compared to Pink Lady Apples.
 
 # Problem 2:
 ```{r}
